[package]
name = "ronly"
version = "0.0.1"
edition = "2021"
authors = ["Ryan Dahl <ry@tinyclouds.org>"]
description = "Read-only sandbox for untrustworthy agents"
license = "MIT"
repository = "https://github.com/denoland/ronly"

[dependencies]
lexopt = "0.3"
libc = "0.2"

[dev-dependencies]
nix = { version = "0.29", features = ["user"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = [
  "mount",
  "sched",
  "signal",
  "process",
  "fs",
] }
seccompiler = "0.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
