[package]
name = "ronly"
version = "0.2.0"
edition = "2021"
authors = ["Ryan Dahl <ry@tinyclouds.org>"]
description = "Read-only sandbox for untrustworthy agents"
license = "MIT"
repository = "https://github.com/denoland/ronly"

[dependencies]
lexopt = "0.3"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = [
  "mount",
  "sched",
] }
seccompiler = "0.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
